[package]
name = "motion_list_rs"
version = "1.0.0"
authors = ["BenHall-7 <benjaminjahall@gmail.com>"]
edition = "2018"

[lib]
name = "motion_lib"
path = "src/motion_lib/lib.rs"

[[bin]]
name = "yamlist"
path = "src/yamlist/main.rs"

[dependencies]
byteorder = "1.3.2"
serde = { version = "1.0.98", features = ["derive"] }
serde_yaml = "0.8"
indexmap = { version = "1.2.0", features = ["serde-1"] }
lazy_static = "1.4.0"