[package]
name = "motion_list_rs"
description = "Library for working with motion_list.bin files in Smash Ultimate"
repository = "https://github.com/ultimate-research/motion_lib"
license = "MIT"
version = "1.3.1"
authors = ["BenHall-7 <benjaminjahall@gmail.com>"]
edition = "2018"

[lib]
name = "motion_lib"
path = "src/motion_lib/lib.rs"

[[bin]]
name = "yamlist"
path = "src/yamlist/main.rs"

[dependencies]
byteorder = "^1.3"
diff-struct = "^0.3"
serde = { version = "^1", features = ["derive"] }
serde_yaml = "0.8"
indexmap = { version = "^1.2", features = ["serde-1"] }
lazy_static = "^1.4"
structopt = "^0.3"
hash40 = "0.4.4"
