[package]
name = "motion_list_rs"
description = "Library for working with motion_list.bin files in Smash Ultimate"
repository = "https://github.com/ultimate-research/motion_lib"
license = "MIT"
version = "1.4.3"
authors = ["BenHall-7 <benjaminjahall@gmail.com>"]
edition = "2021"

[lib]
name = "motion_lib"
path = "src/lib.rs"

[dependencies]
byteorder = "1.3"
diff-struct = "0.3"
serde = { version = "1", features = ["derive"] }
indexmap = { version = "1.2", features = ["serde-1"] }
lazy_static = "1.4"
hash40 = "1.2.0"

[workspace]
members = ["yamlist"]
